[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["seb <zwep718@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
requests = "^2.32.3"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
